repalce 404.png to ?

--- a/src/app/features/character/component/character/character.component.html
+++ b/src/app/features/character/component/character/character.component.html
@@ -3,6 +3,7 @@
         <mat-card-header>
             <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
             </div>
+            <!-- <img mat-card-avatar class="avatar" [src]="data.images.icon" loading="lazy" appImgErrorHandle> -->
             <mat-card-title>{{data.name[currentLanguage]}}</mat-card-title>
             <!-- <mat-card-subtitle>{{data.weaponType}}
             </mat-card-subtitle> -->
