--- a/src/app/features/character/component/weapon/weapon.component.html
+++ b/src/app/features/character/component/weapon/weapon.component.html
@@ -3,6 +3,7 @@
         <mat-card-header>
             <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
             </div>
+            <!-- <img mat-card-avatar class="avatar" [src]="weaponData.images.icon" loading="lazy" appImgErrorHandle> -->
             <mat-card-title class="header-text">
                 <app-mat-filtering-selector
                     [title]="'WEAPON.NAME'"
