--- a/src/app/features/character/component/character/character.component.html
+++ b/src/app/features/character/component/character/character.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="data">
     <mat-card class="card" [style.width.px]="cardWidth">
         <mat-card-header>
-            <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
-            </div>
-            <!-- <img mat-card-avatar class="avatar" [src]="data.images.icon" loading="lazy" appImgErrorHandle> -->
+            <!-- <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
+            </div> -->
+            <img mat-card-avatar class="avatar" [src]="data.images.icon" loading="lazy" appImgErrorHandle>
             <mat-card-title>{{data.name[currentLanguage]}}</mat-card-title>
             <!-- <mat-card-subtitle>{{data.weaponType}}
             </mat-card-subtitle> -->
