rollback resource url

--- a/src/app/features/character/component/weapon/weapon.component.html
+++ b/src/app/features/character/component/weapon/weapon.component.html
@@ -1,9 +1,9 @@
 <ng-container>
     <mat-card class="card" [style.width.px]="cardWidth">
         <mat-card-header>
-            <!-- <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
-            </div> -->
-            <img mat-card-avatar class="avatar" [src]="weaponData.images.icon" loading="lazy" appImgErrorHandle>
+            <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
+            </div>
+            <!-- <img mat-card-avatar class="avatar" [src]="weaponData.images.icon" loading="lazy" appImgErrorHandle> -->
             <mat-card-title class="header-text">
                 <app-mat-filtering-selector
                     [title]="'WEAPON.NAME'"
@@ -15,6 +15,7 @@
                     [optionInnerTextProperty]="'names'"
                     [selectedDispalyProperty]="'name'"
                     [service]="weaponService"
+                    [listenLoadEvent]="true"
                     [currentLanguage]="currentLanguage">
                 </app-mat-filtering-selector>
             </mat-card-title>
