--- a/src/app/features/character/component/artifact-auto/artifact-auto.component.css
+++ b/src/app/features/character/component/artifact-auto/artifact-auto.component.css
@@ -56,6 +56,7 @@ table {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 
