--- a/src/app/features/character/component/artifact/artifact.component.html
+++ b/src/app/features/character/component/artifact/artifact.component.html
@@ -19,6 +19,7 @@
                             [optionValueProperty]="'setId'"
                             [optionInnerTextProperty]="'setName'"
                             [selectedDispalyProperty]="'setName'"
+                            [selectedDispalyIcon]="true"
                             [service]="artifactService"
                             [dispalyIconWhenSelected]="true"
                             [currentLanguage]="currentLanguage">
@@ -36,6 +37,7 @@
                             [optionValueProperty]="'setId'"
                             [optionInnerTextProperty]="'setName'"
                             [selectedDispalyProperty]="'setName'"
+                            [selectedDispalyIcon]="true"
                             [service]="artifactService"
                             [dispalyIconWhenSelected]="true"
                             [currentLanguage]="currentLanguage">
