--- a/src/app/features/character/component/enemy/enemy.component.html
+++ b/src/app/features/character/component/enemy/enemy.component.html
@@ -13,6 +13,7 @@
                     [optionValueProperty]="'index'"
                     [optionInnerTextProperty]="'names'"
                     [selectedDispalyProperty]="'name'"
+                    [selectedDispalyIcon]="false"
                     [service]="enemyService"
                     [currentLanguage]="currentLanguage">
                 </app-mat-filtering-selector>
