--- a/src/app/features/character/component/other/other.component.css
+++ b/src/app/features/character/component/other/other.component.css
@@ -97,12 +97,14 @@ table tr:first-child .content-right {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .normal-fiedld {
