--- a/src/app/features/character/component/weapon/weapon.component.html
+++ b/src/app/features/character/component/weapon/weapon.component.html
@@ -14,6 +14,7 @@
                     [optionValueProperty]="'index'"
                     [optionInnerTextProperty]="'names'"
                     [selectedDispalyProperty]="'name'"
+                    [selectedDispalyIcon]="false"
                     [service]="weaponService"
                     [listenLoadEvent]="true"
                     [currentLanguage]="currentLanguage">
