--- a/src/app/root/menu/menu.component.html
+++ b/src/app/root/menu/menu.component.html
@@ -1,20 +1,11 @@
 <mat-nav-list class="menu-list">
   <ng-container *ngFor="let menu of menuList">
     <a mat-list-item (click)="onClick(menu)">
-      <div class="icon-div">
-        <div class="icon-before"></div>
-        <img class="icon" [style.background]="menu.bgImg" [src]="menu.iconImg" loading="lazy" appImgLoadAndErrorHandle>
-        <img class="icon-after" [src]="menu.elementSvg" loading="lazy" appImgErrorHandle>
-      </div>
-      <ng-container *ngIf="menu.sexType; then player else character"></ng-container>
-      <ng-template #player>
-        <span class="name" [innerText]="('PLAYER.' + menu.sexType | translate) + ' (' + ('ELEMENT.' + menu.elementType | translate) + ')'"></span>
-      </ng-template>
-      <ng-template #character>
-        <span class="name" [innerText]="menu.names[currentLanguage]"></span>
-      </ng-template>
-      <span class="spacer"></span>
-      <figure *ngIf="menu.isEnkaData" class="shinshinmoe"></figure>
+      <app-chara-option
+        [charaInfo]="menu"
+        [currentLanguage]="currentLanguage"
+        class="option"
+      ></app-chara-option>
     </a>
   </ng-container>
 </mat-nav-list>
